[package]
name = "wittier"
description = "Automatically generate WebAssembly Interface Type (WIT) definitions for Rust functions and types, and their wasmtime host implementations."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
colored = "2.1.0"
convert_case = "0.6.0"
rustdoc-types = "0.23.0"                             # format version 27
serde_json = "1.0.111"
